<resources>
    <string name="app_name">HKUEEE</string>
    <string name="te1">Prof. S.C.Chan</string>
    <string name="te2">Prof. K.T.Chau</string>
    <string name="te3">Dr. V.W.L.Tam</string>
    <string name="te4">Dr. W.W.T.Fok</string>
    <string name="te5">Dr. Y.C.Wu</string>
    <string name="te6">Dr. Q.Chen</string>
    <string name="te7">Prof. G.Chesi</string>
    <string name="te8">Dr. A.H.W.Choi</string>
    <string name="te9">Prof. W.C.H.Choy</string>
    <string name="te10">Prof. L.K.Yeung</string>
    <string name="te11">Dr. Zhiqin Chu</string>
    <string name="te12">Prof. D.J.Hill</string>
    <string name="te13">Dr. Y.Hou</string>
    <string name="te14">Dr. K.B.Huang</string>
    <string name="te15">Prof. R.S.Y.Hui</string>
    <string name="te16">Dr. L.Jiang</string>
    <string name="te17">Prof. R.Y.K.Kwok</string>
    <string name="te18">Prof. P.T.Lai</string>
    <string name="te19">Prof. E.Y.M.Lam</string>
    <string name="te20">Dr. J.C.K.Lam</string>
    <string name="te21">Dr. K.H.Lam</string>
    <string name="te22">Dr. W.H.Lam</string>
    <string name="te23">Dr. C.K.Lee</string>
    <string name="te24">Ir W.K.Lee</string>
    <string name="te25">Dr. W.N.Lee</string>
    <string name="te26">Dr. K.C.Leung</string>
    <string name="te27">Dr. K.H.Li</string>
    <string name="te28">Prof. V.O.K.Li</string>
    <string name="te29">Dr. T.Liu</string>
    <string name="te30">Dr. K.S.Lui</string>
    <string name="te32">Ir Dr.M.H.Pong</string>
    <string name="te31">Dr. G.K.H.Pang</string>
    <string name="te33">Dr. P.W.T.Pong</string>
    <string name="te34">Dr. H.K.H.So</string>
    <string name="te35">Prof. S.C.Tan</string>
    <string name="te36">Prof. N.C.Tien</string>
    <string name="te37">Dr. K.K.M.Tsia</string>
    <string name="te38">Prof. K.K.Y.Wong</string>
    <string name="te39">Dr. N.Wong</string>
    <string name="te40">Prof. E.X.Wu</string>
    <string name="te41">Dr. J.C.H.Yuen</string>
    <string name="te42">Dr. J.Zhong</string>
    <string name="teinfo0">Prof. S.C. Chan\n\n
    Professor\nAssociate Head (TPG and Development)\n\nB.Sc.(Eng.), Ph.D. H.K.; M.I.E.E.E.\nEmail: scchan@eee.hku.hk\nTel.: 2859-8025\nOffice: CB 721\n\nResearch Interests\n\nS. C. Chan received his B.Sc (Eng) and Ph.D degrees from the University of Hong Kong in 1986 and 1992, respectively. He joined City Polytechnic of Hong Kong at 1990 as an assistant Lecturer and later as a University Lecturer. Since 1994, he has been with the department of electrical and electronic engineering, the University of Hong Kong, and is now a Professor. He held visiting positions in Microsoft Corporation, Redmond, USA, Microsoft Research Asia, University of Texas at Arlington, and Nanyang Technological University.\n\nProf. Chan’s main research area is signal processing and applications. His previous research covers fast transform algorithms, filter design and realization, multirate and array signal processing, adaptive and communications signal processing, data compression and image-based rendering, high-speed signal converters, biomedical signal processing and bioinformatics. His research sponsors include the HK Research Grant Council (RGC) and the innovative technology fund (ITF) of HK.\n\nProf. Chan has served in a number of professional and administrative committees. He is currently a member of the Digital Signal Processing Technical Committee of the IEEE Circuits and Systems Society, Associate Editors for IEEE Trans. Circuits and Systems I and Journal of Signal Processing systems, and was the Chairman of the IEEE HK Chapter of Signal Processing. He was the special session chairman of ICASSP2003 and is an organizing committee member of the IEEE 2010 ICIP.\n\nProf. Chan has published more than 200 journal and conference articles and is the co-author of a book: image-based rendering by Springer, 2006.
    </string>
    <string name="teinfo1">
    Prof. K.T. Chau\n\nProfessor\nHead of Department\n\nB.Sc. (Eng.), M.Phil., Ph.D. H.K.; C.Eng., F.I.E.E.E., F.I.E.T., F.H.K.I.E.\nEmail: ktchau@eee.hku.hk\nWeb: https://www.eee.hku.hk/~ktchau\nTel.: 2859-2704\nOffice: CB 709\n\nResearch Interests\n\nElectric Vehicle Technologies, Renewable Energy Systems, Machines and Drives, Power Electronics\n\nIr Professor K.T. Chau received his B.Sc.(Eng.) degree with First Class Honours, M.Phil. degree, and Ph.D. degree all in Electrical &amp; Electronic Engineering from The University of Hong Kong. He joined the alma mater in 1995, and has served as Director of the International Research Centre for Electric Vehicles, and Associate Dean of Engineering (Teaching and Learning – Taught Postgraduate). Currently, he serves as Professor and Head of Department in the Department of Electrical &amp; Electronic Engineering.\n\nHe is a Chartered Engineer, Fellow of the IET, and Fellow of the HKIE. He is elected Fellow of the IEEE for Contributions to Energy Systems for Electric and Hybrid Vehicles. He has served as chairs and organizing committee members for many international conferences, especially in the area of Electric Vehicles. Currently, he serves as Editor of the Studies in Science and Technology, Co-Editor of the Journal of Asian Electric Vehicles, Section Editor-in-Chief of the Energies, and Editorial Board Member of some international journals. He is also an international consultant for electric vehicle technologies. Professor Chau has published 7 books, 9 book chapters and over 270 refereed journal papers as well as many conference papers and industrial reports. His teaching philosophy follows the Confucian classic “Li Ji” – Teaching and learning are mutually motivating.\n\nProfessor Chau has received many awards: including the Chang Jiang Chair Professorship by the Ministry of Education, China; Natural Science Award (First Prize) by the Ministry of Education, China; the Environmental Excellence in Transportation Award for Education, Training and Public Awareness by the Society of Automotive Engineers (SAE) International; the Award for Innovative Excellence in Teaching, Learning and Technology at the International Conference on College Teaching and Learning; and the University Teaching Fellow Award by The University of Hong Kong. Currently, he serves as IEEE Vehicular Technology Society (VTS) Distinguished Lecturer.\n\nIn community service, he has served as Member of the Electrical Safety Advisory Committee for the Electrical and Mechanical Services Department, Member of the Accreditation Advisory Board for the Hong Kong Accreditation Service of Innovation and Technology Commission, Member of the Appeal Board Panel under Energy Efficiency (Labelling of Products) Ordinance, Member of the Disciplinary Tribunal Panel under Electricity Ordinance, and Member of the Disciplinary Board Panel under Building Energy Efficiency (Registered Energy Assessors) Regulation. He has also served as Member of Engineering Panel for the Hong Kong Research Grants Council (RGC), Member of Innovation and Technology Support Program Panel for the Innovation and Technology Fund (ITF), and Member of Incu-Tech/ Incu-Bio Technology Program Panel for the Hong Kong Science and Technology Parks (HKSTP).

    </string>
    <string name="fqt1">
       Q1: Can I apply for more than one taught postgraduate curriculum?
    </string>
    <string name="fqt2">
       Q2: How much is the application fee for taught postgraduate admissions and how should I pay for it?
    </string>
    <string name="fqt3">
       Q3: When will the results of applications be announced?
    </string>
    <string name="fqt4">
       Q4: If my application submission is incomplete, will it still be processed?
    </string>
    <string name="fqt5">
       Q5: How can I submit the supporting documents for my application?
    </string>
    <string name="fqt6">
       Q6: If I submit multiple applications, how many sets of supporting documents shall I submit?
    </string>
    <string name="fqt7">
       Q7: Do I need to attach or send in academic / professional referees" reports?
    </string>
    <string name="fqt8">
       Q8:If I am given a conditional offer by the University, are photocopies of the required documents acceptable to the University?
    </string>
    <string name="fqt9">
       Q9: How can I get the officially certified true copies of transcripts of my undergraduate / postgraduate studies forwarded to the Department concerned*Note?
    </string>
    <string name="fqt10">
       Q10: Can I apply for transferring credit(s) for course(s) completed successfully at this / another university to be counted towards completion of the MSc(Eng) / MSc curriculum in HKU?\n\n
    </string>
    <string name="fqt11">
       Q11: Is concurrent registration allowed in HKU?
    </string>
    <string name="fqt12">
       Q12: Will applications submitted after application deadline be considered?
    </string>
    <string name="fqt13">
       Q13: Do I need to attach my undergraduate results with the application form if I am a graduate of The University of Hong Kong?
    </string>
    <string name="fqt14">
       Q14: Is there any financial assistance provided to students admitted to the curriculum?
    </string>
</resources>